--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Miasta, które chciałabym zwiedzić</title>
 </head>
+
 <body>
-    
+    <h1>Podróże po miastach świata</h1>
+    <p>Na tej stronie opiszę miasta na świecie, które chciałabym zwiedzić.</p>
+    <div class="amsterdam">
+        <h3>Amsterdam</h3>
+        <div class="amsterdamzdj">
+            <img src="./img/amsterdam1.jpg" alt="amsterdam1">
+            <img src="./img/amsterdam2.jpg" alt="amsterdam2">
+            <img src="./img/amsterdam3.jpg" alt="amsterdam3">
+            <p>Amsterdam, stolica Holandii oraz jedno z najbardziej otwartych miast świata. Amsterdam słynie ze swoich
+                kanałów oraz swobodnego podejścia do życia. Znajdziemy tu również wiele muzeów i innych placówek
+                kulturalnych. Miasto wręcz kipi historią. Spacerując po centrum miasta co chwilę natrafimy na fasadę
+                historycznego budynku lub inny ślad po średniowiecznej historii miasta.W przeszłości Amsterdam był
+                jednym z najważniejszych portów świata.</p>
+            <ul>
+                <li>Pałac Królewski (Koninklijk Paleis)</li>
+                <li>Oude Kerk - najstarszy kościół w Amsterdamie</li>
+                <li>Muzeum Narodowe (Rijksmuseum)</li>
+                <li>Muzeum van Gogha</li>
+                <li>Dom Rembrandta</li>
+                <li>dom Anny Frank</li>
+            </ul>
+        </div>
+
+    </div>
+    <div class="paryz">
+        <h3>Paryż</h3>
+        <div class="paryzzdj">
+            <img src="./img/paryz1.jpeg" alt="paryz1">
+            <img src="./img/paryz2.jpg" alt="paryz2">
+            <img src="./img/paryz3.jpg" alt="paryz3">
+            <p>Paryż to miejsce, które trzeba zobaczyć. Miasto zakochanych, stolica światowej mody, jeden z
+                najważniejszych ośrodków turystycznych i kulturalnych. Przybywający tu filozofowie i artyści od wieków
+                kształtowali niepowtarzalną atmosferę tego miasta.W Paryżu jest 20 dzielnic ułożonych w spiralę
+                rozchodzącą się od centrum miasta.</p>
+                <ul>
+                    <li>Arc de Triomphe de l Étoile</li>
+                    <li>Eiffel Tower</li>
+                    <li>Sacré-Cœur Basilica</li>
+                    <li>Moulin Rouge</li>
+                    <li>Moulin Rouge</li>
+                    <li>Moulin Rouge</li>
+
+                </ul>
+        </div>
+    </div>
 </body>
+
 </html>
