--- a/index.html
+++ b/index.html
@@ -44,17 +44,48 @@
                 najważniejszych ośrodków turystycznych i kulturalnych. Przybywający tu filozofowie i artyści od wieków
                 kształtowali niepowtarzalną atmosferę tego miasta.W Paryżu jest 20 dzielnic ułożonych w spiralę
                 rozchodzącą się od centrum miasta.</p>
-                <ul>
-                    <li>Arc de Triomphe de l Étoile</li>
-                    <li>Eiffel Tower</li>
-                    <li>Sacré-Cœur Basilica</li>
-                    <li>Moulin Rouge</li>
-                    <li>Moulin Rouge</li>
-                    <li>Moulin Rouge</li>
+            <ul>
+                <li>Arc de Triomphe de l Étoile</li>
+                <li>Eiffel Tower</li>
+                <li>Sacré-Cœur Basilica</li>
+                <li>Moulin Rouge</li>
+                <li>Moulin Rouge</li>
+                <li>Moulin Rouge</li>
 
-                </ul>
+            </ul>
         </div>
     </div>
+
+    <div class="barcelona"></div>
+    <h3>Barcelona</h3>
+    <div class="barcelonazdj">
+    <img src="./img/barcelona1.jpg" alt="barcelona1">
+    <img src="./img/barcelona2.jpeg" alt="barcelona2">
+    <img src="./img/barcelona3.jpg" alt="barcelona3">
+    <p>Barcelona – stolica Katalonii i drugie największe miasto Hiszpanii. Jest położona nad Morzem Śródziemnym i
+        stanowi cel wycieczek dla milionów turystów rocznie. Kojarzymy ją głównie z ciepłego klimatu, wyjątkowej
+        architektury.W Barcelonie mieści się jeden z największych i najbogatszych klubów piłkarskich na świecie, FC
+        Barcelona. Stadion Camp Nou w największej w Europie, o pojemności prawie 100 000 osób. </p>
+<ul>
+
+<li>Sagrada Familia</li>  
+<li>Park Güell</li>
+<li>Casa Batlló</li>
+<li>Casa Milà (La Pedrera)</li>
+<li> Poble Espanyol</li>
+</ul>
+</div>
+
+<div class="monaco"></div>
+<h3>Monaco</h3>
+<div class="monacozdj">
+    <img src="./img/monako1.jpeg" alt="monaco1">
+    <img src="./img/monako2.jpeg" alt="monaco2">
+    <img src="./img/monako3.jpeg" alt="monaco3">
+    <p></p>
+</div>
+
+
 </body>
 
 </html>
