--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Miasta, które chciałabym zwiedzić</title>
 </head>
-
+<!--Kinga Jaszewska-->
 <body>
     <h1>Podróże po miastach świata</h1>
     <p>Na tej stronie opiszę miasta na świecie, które chciałabym zwiedzić.</p>
