--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <title>Miasta, które chciałabym zwiedzić</title>
 </head>
 <!--Kinga Jaszewska-->
+
 <body>
-    <h1>Podróże po miastach świata</h1>
+    <div class="nav">
+      <h1>Podróże po miastach świata</h1>
     <p>Na tej stronie opiszę miasta na świecie, które chciałabym zwiedzić.</p>
+    </div>
     <div class="amsterdam">
         <h3>Amsterdam</h3>
         <div class="amsterdamzdj">
@@ -56,34 +59,89 @@
         </div>
     </div>
 
-    <div class="barcelona"></div>
-    <h3>Barcelona</h3>
-    <div class="barcelonazdj">
-    <img src="./img/barcelona1.jpg" alt="barcelona1">
-    <img src="./img/barcelona2.jpeg" alt="barcelona2">
-    <img src="./img/barcelona3.jpg" alt="barcelona3">
-    <p>Barcelona – stolica Katalonii i drugie największe miasto Hiszpanii. Jest położona nad Morzem Śródziemnym i
-        stanowi cel wycieczek dla milionów turystów rocznie. Kojarzymy ją głównie z ciepłego klimatu, wyjątkowej
-        architektury.W Barcelonie mieści się jeden z największych i najbogatszych klubów piłkarskich na świecie, FC
-        Barcelona. Stadion Camp Nou w największej w Europie, o pojemności prawie 100 000 osób. </p>
-<ul>
+    <div class="barcelona">
+        <h3>Barcelona</h3>
+        <div class="barcelonazdj">
+            <img src="./img/barcelona1.jpg" alt="barcelona1">
+            <img src="./img/barcelona2.jpeg" alt="barcelona2">
+            <img src="./img/barcelona3.jpg" alt="barcelona3">
+            <p>Barcelona – stolica Katalonii i drugie największe miasto Hiszpanii. Jest położona nad Morzem Śródziemnym
+                i
+                stanowi cel wycieczek dla milionów turystów rocznie. Kojarzymy ją głównie z ciepłego klimatu, wyjątkowej
+                architektury.W Barcelonie mieści się jeden z największych i najbogatszych klubów piłkarskich na świecie,
+                FC
+                Barcelona. Stadion Camp Nou w największej w Europie, o pojemności prawie 100 000 osób. </p>
+            <ul>
 
-<li>Sagrada Familia</li>  
-<li>Park Güell</li>
-<li>Casa Batlló</li>
-<li>Casa Milà (La Pedrera)</li>
-<li> Poble Espanyol</li>
-</ul>
-</div>
+                <li>Sagrada Familia</li>
+                <li>Park Güell</li>
+                <li>Casa Batlló</li>
+                <li>Casa Milà (La Pedrera)</li>
+                <li> Poble Espanyol</li>
+            </ul>
+        </div>
+    </div>
 
-<div class="monaco"></div>
-<h3>Monaco</h3>
-<div class="monacozdj">
-    <img src="./img/monako1.jpeg" alt="monaco1">
-    <img src="./img/monako2.jpeg" alt="monaco2">
-    <img src="./img/monako3.jpeg" alt="monaco3">
-    <p></p>
-</div>
+    <div class="monaco">
+        <h3>Monaco</h3>
+        <div class="monacozdj">
+            <img src="./img/monako1.jpeg" alt="monaco1">
+            <img src="./img/monaco2.jpg" alt="monaco2">
+            <img src="./img/monaco3.jpg" alt="monaco3">
+            <p>Monako jest najmniejszym po Watykanie państwem świata. Monako to państwo-miasto w południowej Europie,
+                nad
+                Morzem Śródziemnym, na Wybrzeżu Lazurowym. Leży 18 km na wschód od francuskiej Nicei.</p>
+            <ul>
+
+                <li>Monako-Ville: Stare Miasto na Skale Monakijskiej</li>
+                <li> katedra pod wezwaniem Matki Boskiej Niepokalanego Poczęcia</li>
+                <li>Monte-Carlo</li>
+                <li>Pałac Sprawiedliwości (Palais de Justice)</li>
+                <li>Ogród różany księżnej Grace</li>
+            </ul>
+        </div>
+    </div>
+    <div class="rzym">
+        <h3>Rzym</h3>
+        <div class="rzymzdj">
+            <img src="./img/rzym1.jpg" alt="rzym1">
+            <img src="./img/rzym2.jpg" alt="rzym2">
+            <img src="./img/rzym3.jpg" alt="rzym3">
+            <p>Rzym jest stolicą Włoch i jednym z najsławniejszych miast Europy. Usytuowany jest na siedmiu wzgórzach,
+                25 km od brzegu Morza Tyrreńskiego, w środkowej części Lacjum.Rzym, zwany Wiecznym Miastem, kryje w
+                sobie perełki architektoniczne z różnych okresów dziejów. Zwiedzić można tu budowle starożytne,
+                gotyckie, barokowe czy renesansowe. </p>
+            <ul>
+                <li>Koloseum w Rzymie</li>
+                <li>Kaplica Sykstyńska</li>
+                <li>Panteon</li>
+                <li>Fontanna Di Trevi</li>
+                <li>Zamek i Most Świętego Anioła</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="losAngeles">
+        <h3>Los Angeles</h3>
+        <div class="lazdj">
+            <img src="./img/la1.jpg" alt="la1">
+            <img src="./img/la2.jpg" alt="la2">
+            <img src="./img/la3.jpg" alt="la3">
+            <P>Los Angeles- miasto w USA należące do stanu Kalifornia. Głównym źródłem zarobków w mieście jest kręcenie
+                wielu filmów i programów telewizyjnych. Los Angeles należy do jednych z najbardziej rozwiniętych miast
+                USA. Teren LA zamieszkują mieszkańcy wielu narodowości. Jednym z minusów mieszkania w tym
+                zmodernizowanym mieście jest wysoka przestępczośc, lecz na szczęście zmniejsza się ona z roku na rok.
+                Miasto narażone jest na trzęsienia ziemi, które powodują wielomilionowe straty. </P>
+                <ul>
+                    <li>Disneyland</li>
+                    <li>Obserwatorium Mount Wilson</li>
+                    <li>El Pueblo de Los Angeles State Park</li>
+                    <li>znak Hollywood </li>
+                    <li>Universal Studios Hollywood</li>
+                    <li>Aleja Gwiazd</li>
+                </ul>
+        </div>
+    </div>
 
 
 </body>
